Made a file for the UITabBarController
for setting tab titles early on and it might come in handy later on.

--- a/SlugRoute/Base.lproj/Main.storyboard
+++ b/SlugRoute/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController id="49e-Tb-3d3" customClass="TabBarController" customModule="SlugRoute" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="JCG-iL-fEk"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
