Swipe right to "back" feature for twitter feed
if you swipe right from the twitter view controller that shows the
twitter feed it will go back to the SocialViewController

--- a/SlugRoute/Base.lproj/Main.storyboard
+++ b/SlugRoute/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
         <!--Social View Controller-->
         <scene sceneID="2Ya-FD-4ar">
             <objects>
-                <viewController title="Social View Controller" id="HFf-KR-bHr" customClass="SocialViewController" customModule="SlugRoute" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="socialView" title="Social View Controller" id="HFf-KR-bHr" customClass="SocialViewController" customModule="SlugRoute" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xSV-Qd-T6w"/>
                         <viewControllerLayoutGuide type="bottom" id="Gku-0O-r0n"/>
